@@ -769,7 +769,7 @@ Mon Oct 29 09:36:34 GMT 2007
 
    I would like to report a bug in the 0.4 pre-release.  In the clash 
    panel generated by probe, the vertical bar doesn't work anymore.  
-   Could you fix it?
+   Could you fix it?n
 
 Jianghai
 
@@ -5921,6 +5921,35 @@ Tue Nov 30 02:42:51 GMT 2010
   o The hydrogens on DTT are drawn wrongly (additional half-bond).  
 
 * Too complicated for now
+
+----
+Tue Dec  7 00:37:42 GMT 2010
+
+    Here is how to run molprobity probe for just the interactions of
+    environment onto the ligand (and vica versa):
+
+    (No internal interaction of ligand)
+
+   Here residue 459 is the ligand:
+
+   probe -u -both "459" "not 459" 2gpu-A459.pdb 2gpu-coot-0.pdb > probe.dots
+
+   Do this after running reduce of course (so that the Hs are pointing
+   in good directions).
+
+---
+Wed Dec  8 14:37:58 GMT 2010
+
+  Francis Reyes
+   
+  On pressing Esc during refinement: 
+
+	Can we have a dialog box pop up summarizing the geometry and
+	asking us to accept/reject instead of reverting back? 
+	Sometimes a real space refine takes too long/gets lost when
+	the best fit to the density is observed before that happens.
+
+ 
 
 
 ------
